Ensured ellipsis shown if song title cut off

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -224,7 +224,7 @@ h2 {
     border-radius: 10px;
     padding: 12px;
     width: 150px; 
-    height: 189px;
+    height: 218px;
     box-sizing: border-box;
     transition: transform 0.2s ease;
     word-wrap: break-word;
@@ -237,11 +237,11 @@ h2 {
     background-color: rgba(255, 255, 255, 0.15);
 }
 
-.artist-rank {
+.rank {
     font-weight: bold;
     margin-top: 8px;
     font-size: 1.1em;
-  }  
+}  
 
 .album-cover, .artist-image {
     width: 100px; 
@@ -256,12 +256,12 @@ h2 {
     text-decoration: none;
     font-size: 14px;
     line-height: 1.2em;
-    max-height: 3.6em; /* roughly 3 lines */
+    height: 2.4em; 
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-line-clamp: 3;
-    line-clamp: 3; 
+    -webkit-line-clamp: 2;
+    line-clamp: 2; 
     -webkit-box-orient: vertical;
 }
 
